[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/UI/hover.png" type="Texture" id=1]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/UI/LoadingWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/Login/Register.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[node name="Register" type="Control"]
anchor_top = -0.000700684
anchor_right = 1.0
anchor_bottom = 0.999299
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignUpWindow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -125.0
margin_right = 175.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="SignUpWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.5
margin_top = -125.0
margin_right = 162.5
margin_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SignUpWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -111.0
margin_right = 58.0
margin_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Sign Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SignUpWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -62.0
margin_right = 110.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLineEdit" type="LineEdit" parent="SignUpWindow/VBoxContainer"]
margin_right = 220.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLineEdit" type="LineEdit" parent="SignUpWindow/VBoxContainer"]
margin_top = 36.0
margin_right = 220.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
placeholder_text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLineEdit" type="LineEdit" parent="SignUpWindow/VBoxContainer"]
margin_top = 72.0
margin_right = 220.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
secret = true
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLineEdit2" type="LineEdit" parent="SignUpWindow/VBoxContainer"]
margin_top = 108.0
margin_right = 220.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
secret = true
placeholder_text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SignUpWindow"]
margin_top = 207.0
margin_right = 350.0
margin_bottom = 233.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="SignUpWindow/HBoxContainer"]
margin_left = 97.0
margin_right = 167.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 70, 26 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"

[node name="BackButton" type="Button" parent="SignUpWindow/HBoxContainer"]
margin_left = 183.0
margin_right = 253.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 70, 26 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="LoadingWindow" parent="." instance=ExtResource( 6 )]
visible = false

[node name="PopupHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="SignUpWindow/VBoxContainer/UsernameLineEdit" to="." method="on_LineEdit_Enter"]
[connection signal="text_entered" from="SignUpWindow/VBoxContainer/EmailLineEdit" to="." method="on_LineEdit_Enter"]
[connection signal="text_entered" from="SignUpWindow/VBoxContainer/PasswordLineEdit" to="." method="on_LineEdit_Enter"]
[connection signal="text_entered" from="SignUpWindow/VBoxContainer/PasswordLineEdit2" to="." method="on_LineEdit_Enter"]
[connection signal="pressed" from="SignUpWindow/HBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="SignUpWindow/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
